--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
     <string name="cancel">cancel</string>
     <string name="title_activity_settings">Settings</string>
 
+    <string name="message_success">Cadastro realizado com sucesso</string>
+
     <!-- preferences -->
     <string name="title_scheduled_deliveries">Entregas Previstas</string>
     <string name="pref_scheduled">scheduled</string>
