--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,10 +10,11 @@
     <string name="count_start">0</string>
     <string name="reset">Reset</string>
     <string name="delivered">Entregue</string>
-    <string name="not_delivered">Ocorrência</string>
+    <string name="occurrence">Ocorrência</string>
     <string name="ok">ok</string>
     <string name="cancel">cancel</string>
     <string name="title_activity_settings">Settings</string>
+    <string name="select_status">Selecione o status</string>
 
     <string name="message_success">Cadastro realizado com sucesso</string>
 
@@ -22,6 +23,10 @@
     <string name="pref_scheduled">scheduled</string>
     <string name="summary_scheduled">Definir total de entregas previstas</string>
 
+    <string name="title_url">Server URL</string>
+    <string name="pref_url">url</string>
+    <string name="summary_url">Endereço do servidor</string>
+
     <!-- cards -->
     <string name="title_card_delivered">Item entregue no endereço</string>
     <string name="option_main">Principal</string>
@@ -29,8 +34,7 @@
 
     <string name="title_card_cause">Motivo</string>
     <string name="option_absent">Ausente na data</string>
-    <string name="option_incorrect_address">Ausente na data</string>
     <string name="option_changed_address">Mudou de endereço</string>
-
+    <string name="option_incorrect_address">Endereço incorreto</string>
 
 </resources>
