--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="ok">ok</string>
     <string name="cancel">cancel</string>
     <string name="title_activity_settings">Settings</string>
-    <string name="select_status">Selecione o status</string>
+    <string name="select_status">Informe o status da entrega</string>
 
     <string name="message_success">Cadastro realizado com sucesso</string>
 
