--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,9 @@
     <string name="ready_scan">Ready to scan...</string>
     <string name="count_delivered">Entregas</string>
     <string name="count_start">0</string>
-    <string name="reset">Reset</string>
+    <string name="reset">Limpar</string>
+    <string name="reset_sended">Limpar Enviados</string>
+    <string name="resend">Reenviar</string>
     <string name="delivered">Entregue</string>
     <string name="occurrence">Ocorrência</string>
     <string name="ok">ok</string>
@@ -32,7 +34,7 @@
     <string name="option_main">Endereço principal</string>
     <string name="option_alternative">Endereço alternativo</string>
 
-    <string name="title_card_cause">Item não entregue</string>
+    <string name="title_card_cause">Item ocorrência</string>
     <string name="option_absent">Ausente na data</string>
     <string name="option_changed_address">Mudou de endereço</string>
     <string name="option_incorrect_address">Endereço incorreto</string>
