Get device imei

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Basket Deliverer v1.1</string>
+    <string name="app_name">Basket Deliverer 1.2</string>
     <string name="title_home">Home</string>
     <string name="title_scanner">Scanner</string>
     <string name="title_history">History</string>
